package sa.billing.discounts.domain.model.customer;

public enum CustomerType {
    EMPLOYEE,
    AFFILIATE,
    REGULAR
}