package sa.billing.discounts.domain.model.product;

public enum ProductCategory {
    GROCERY,
    ELECTRONICS,
    CLOTHING,
    BOOKS,
    HOME_GARDEN,
    SPORTS,
    HEALTH_BEAUTY,
    TOYS,
    AUTOMOTIVE,
    OTHER
}